--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.5",
     "@civic/solana-gateway-react": "^0.9.2",
+    "@crossmint/client-sdk-react-ui": "^0.2.0",
     "@identity.com/solana-gateway-ts": "^0.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -24,6 +25,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-is": "^16.8.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
@@ -36,7 +38,8 @@
     "lint:fix": "prettier --write 'src/**/*.{ts,tsx}' && eslint --fix 'src/**/*.{ts,tsx}'",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stop": "npx kill-port 3000"
   },
   "eslintConfig": {
     "extends": [
